# MangoHud-Windows

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: mingw.yml
data/: meson.build
src/: adl.cpp  adl.h  amdgpu.h  battery.h  battery_win32.cpp  blacklist.cpp  cpu_win32.cpp  dxgi_gpu.cpp  dxgi_gpu.h  file_utils.cpp  file_utils.h  file_utils_win32.cpp  fps_metrics.h  gpu.cpp  gpu.h  gpu_metrics_util.h  hud_elements.cpp  hud_elements.h  imgui_utils.h  iostats_win32.cpp  keybinds.cpp  keybinds.h  logging.cpp  mangohud.json.in  memory_win32.cpp  meson.build  net_win32.cpp  notify.cpp  notify.h  notify_win32.cpp  nvidia.cpp  nvidia.h  overlay.cpp  overlay.h  overlay_params.cpp  overlay_params.h  shell.h  vulkan.cpp  winesync.h
src/app/: fps_etw.cpp  fps_etw.h  mangohud_overlay.cpp
src/loaders/: loader_nvml.cpp  loader_nvml.h
src/proxy/: dxgi_proxy.cpp
src/win/: d3d11_hook.cpp  d3d11_hook.h  d3d12_hook.cpp  d3d12_hook.h  kiero.cpp  main.cpp
