option('glibcxx_asserts', type : 'boolean', value : false)
option('use_system_spdlog', type : 'feature', value : 'disabled', description: 'Use system spdlog library')
option('include_doc', type : 'boolean', value : true, description: 'Include the example config files etc.')
option('with_nvml', type : 'combo', value : 'enabled', choices: ['enabled', 'system', 'disabled'], description: 'Enable NVML support')
option('loglevel', type: 'combo', choices : ['trace', 'debug', 'info', 'warn', 'err', 'critical', 'off'], value : 'info', description: 'Max log level in non-debug build')
option('tests', type: 'feature', value: 'auto', description: 'Run tests')
